SERVER-21529 Don't assume char is unsigned in logging

(cherry picked from commit 07b2e02ffddbd9998b8c738895f3fae85b592176)